--- a/config/locales/en.bootstrap.yml
+++ b/config/locales/en.bootstrap.yml
@@ -6,7 +6,7 @@ en:
     actions: "Actions"
     links:
       back: "Back"
-      cancel: "Cancel"
+      cancel: "Back"
       confirm: "Are you sure?"
       destroy: "Delete"
       new: "New"
